@@ -208,18 +208,15 @@ function smarty_mod_default($string, $default="")
 function smarty_func_assign($vars,&$smarty_obj)
 {
 	extract($vars);
-	$smarty_obj->assign($var,$val);
-	return true;
-}
-
-/*======================================================================*\
-    Function: smarty_func_unassign
-    Purpose:  unassign a template variable
-\*======================================================================*/
-function smarty_func_unassign($vars,&$smarty_obj)
-{
-	extract($vars);
-	$smarty_obj->clear_assign($var);
+	if(empty($var)) {
+    	trigger_error("assign: missing 'var' parameter");
+    	return;
+	}
+	if(empty($value)) {
+    	trigger_error("assign: missing 'value' parameter");
+    	return;
+	}
+	$smarty_obj->assign($var,$value);
 	return true;
 }
 
