@@ -1,3 +1,5 @@
+    - added security features for third party template editing (Monte,Andrei)
+    - added assign custom function, documented (Monte)
     - fixed a problem with putting $ followed by numbers inside {strip} and
       {/strip} tags. (Andrei)
     - fixed Config_File class to allow empty config paths (defaults to current
